creacion del css e inicio de maquetacion

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Trabajo Practico n1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <aside>
@@ -54,7 +55,7 @@
         </ul>
     </aside>
 <main class="chat">
-    <section>
+    <section class="chat-message-header">
         <div class="chat-header">
             <img src="avatar.jpeg" alt="imagen de perfil">
           <h3>Aiden Chavez</h3>
