--- a/index.html
+++ b/index.html
@@ -14,42 +14,42 @@
                 <img src="avatar.jpeg" alt="avatar">
                 <div>
                     <h4>Vicent Porter</h4>
-                    <p class="status"> left 7 min ago</p>
+                    <p class="status-offline"> left 7 min ago</p>
                 </div>
             </li>
                         <li class="contact">
                 <img src="avatar.jpeg" alt="avatar">
                 <div>
                     <h4>Aiden Chavez</h4>
-                    <p class="status">online</p>
+                    <p class="status-online"> online</p>
                 </div>
             </li>
                         <li class="contact">
                 <img src="avatar.jpeg" alt="avatar">
                 <div>
                     <h4>Mike Thomas</h4>
-                    <p class="status"> online</p>
+                    <p class="status-online"> online</p>
                 </div>
             </li>
                         <li class="contact">
                 <img src="avatar.jpeg" alt="avatar">
                 <div>
                     <h4>Christian Kelly</h4>
-                    <p class="status"> left 10 hours ago</p>
+                    <p class="status-offline"> left 10 hours ago</p>
                 </div>
             </li>
                         <li class="contact">
                 <img src="avatar.jpeg" alt="avatar">
                 <div>
                     <h4>Monica Ward</h4>
-                    <p class="status"> online</p>
+                    <p class="status-online"> online</p>
                 </div>
             </li>
                         <li class="contact">
                 <img src="avatar.jpeg" alt="avatar">
                 <div>
                     <h4>Dean Henry</h4>
-                    <p class="status"> offline since Oct 28</p>
+                    <p class="status-offline"> offline since Oct 28</p>
                 </div>
             </li>                
         </ul>
@@ -70,7 +70,7 @@
     </section>
     <section class="chat-message">
         <div class="message-sent">
-            <p>Hi Aiden, how are you? How is the project coming along?</p>
+            <p  >Hi Aiden, how are you? How is the project coming along?</p>
             <p class="timestamp">10:10 AM, Today</p>
         </div>
         <div class="message-received">
@@ -83,7 +83,7 @@
         </div>
     </section>
     <section class="chat-footer">
-        <input type="text" placeholder="Enter text here...">
+        <input type="text" placeholder="Enter text here..." class="text-here">
         <button>✈️</button>
     </section>
 </main>
