Final html y css Computadora

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <main class="chat">
     <section class="chat-message-header">
         <div class="chat-header">
-            <img src="avatar.jpeg" alt="imagen de perfil">
+            <img class="img-chatheader" src="avatar.jpeg" alt="imagen de perfil">
           <h3>Aiden Chavez</h3>
           <p>Last seen: 2 hours ago</p>
         </div>
@@ -84,7 +84,7 @@
     </section>
     <section class="chat-footer">
         <input type="text" placeholder="Enter text here..." class="text-here">
-        <button>✈️</button>
+        <button class="plain">✈️</button>
     </section>
 </main>
 </body>
